# assets/generated/swagger/api.swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "Cluster Manager API",
-    "version": "v0.1.0",
+    "version": "v0.2.0",
     "contact": {
       "name": "Michael Venezia",
       "url": "https://github.com/venezia",
@@ -10,8 +10,8 @@
     }
   },
   "schemes": [
-    "http",
-    "https"
+    "https",
+    "http"
   ],
   "consumes": [
     "application/json"
@@ -112,145 +112,6 @@
         ]
       }
     },
-    "/api/v1/getpodcount": {
-      "post": {
-        "summary": "Simple pod count response.  Will respond with the number of pods in the namespace provided",
-        "operationId": "GetPodCount",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/cluster_manager_apiGetPodCountReply"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/cluster_manager_apiGetPodCountMsg"
-            }
-          }
-        ],
-        "tags": [
-          "Cluster"
-        ]
-      }
-    },
-    "/api/v1/helloworld": {
-      "post": {
-        "summary": "Simple Hello World Service - will repeat a greeting to the name provided",
-        "operationId": "HelloWorld",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/cluster_manager_apiHelloWorldReply"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/cluster_manager_apiHelloWorldMsg"
-            }
-          }
-        ],
-        "tags": [
-          "Cluster"
-        ]
-      }
-    },
-    "/api/v1/helm": {
-      "delete": {
-        "summary": "Will delete deployed helm chart",
-        "operationId": "DeleteHelmChart",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/cluster_manager_apiDeleteHelmChartReply"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "name",
-            "description": "What is the name of the deployment.",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "namespace",
-            "description": "What is the namespace of the deployment.",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "Cluster"
-        ]
-      },
-      "put": {
-        "summary": "Will install (or reinstall) helm chart\nThis will be destructive if a chart has already been deployed with the same name",
-        "operationId": "InstallHelmChart",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/cluster_manager_apiInstallHelmChartReply"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/cluster_manager_apiInstallHelmChartMsg"
-            }
-          }
-        ],
-        "tags": [
-          "Cluster"
-        ]
-      }
-    },
-    "/api/v1/tiller": {
-      "post": {
-        "summary": "Will install (or reinstall) tiller",
-        "operationId": "ProvisionTiller",
-        "responses": {
-          "200": {
-            "description": "",
-            "schema": {
-              "$ref": "#/definitions/cluster_manager_apiProvisionTillerReply"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/cluster_manager_apiProvisionTillerMsg"
-            }
-          }
-        ],
-        "tags": [
-          "Cluster"
-        ]
-      }
-    },
     "/api/v1/version": {
       "get": {
         "summary": "Will return version information about api server",
@@ -270,6 +131,66 @@
     }
   },
   "definitions": {
+    "CreateClusterAWSSpecAWSBYOItems": {
+      "type": "object",
+      "properties": {
+        "vpc_id": {
+          "type": "string",
+          "title": "The VPC id, blank for for \"create one for you\", filled if you are BYO VPC"
+        },
+        "security_group_id": {
+          "type": "string",
+          "title": "Security group"
+        }
+      },
+      "title": "For when some things are already created"
+    },
+    "CreateClusterAWSSpecAWSCredentials": {
+      "type": "object",
+      "properties": {
+        "secret_key_id": {
+          "type": "string",
+          "title": "The SecretKeyId for API Access"
+        },
+        "secret_access_key": {
+          "type": "string",
+          "title": "The SecretAccessKey for API access"
+        }
+      },
+      "title": "The credentials to use for creating the cluster"
+    },
+    "CreateClusterAWSSpecAWSDataCenter": {
+      "type": "object",
+      "properties": {
+        "region": {
+          "type": "string",
+          "title": "Which region (us-east-1, etc.)"
+        },
+        "availability_zones": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "title": "Which availability zones (us-east-1b, us-east-2c, us-west-2d, etc.)"
+        }
+      },
+      "title": "Which Data Center"
+    },
+    "CreateClusterAWSSpecAWSInstanceGroup": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string",
+          "title": "Instance type (m5.large, etc.)"
+        },
+        "quantity": {
+          "type": "integer",
+          "format": "int32",
+          "title": "Number of instances (defaults to zero)"
+        }
+      },
+      "title": "Instance groups define a type and number of instances"
+    },
     "GetVersionReplyVersionInformation": {
       "type": "object",
       "properties": {
@@ -344,34 +265,24 @@
     "cluster_manager_apiCreateClusterAWSSpec": {
       "type": "object",
       "properties": {
-        "region": {
-          "type": "string",
-          "title": "The region for AWS"
+        "data_center": {
+          "$ref": "#/definitions/CreateClusterAWSSpecAWSDataCenter",
+          "title": "The AWS Data Center"
         },
-        "secret_key_id": {
-          "type": "string",
-          "title": "The SecretKeyId for API Access"
+        "credentials": {
+          "$ref": "#/definitions/CreateClusterAWSSpecAWSCredentials",
+          "title": "Credentials to build the cluster"
         },
-        "secret_access_key": {
-          "type": "string",
-          "title": "The SecretAccessKey for API access"
-        }
-      }
-    },
-    "cluster_manager_apiCreateClusterMaaSSpec": {
-      "type": "object",
-      "properties": {
-        "endpoint": {
-          "type": "string",
-          "title": "The MaaS API endpoint"
+        "byo": {
+          "$ref": "#/definitions/CreateClusterAWSSpecAWSBYOItems",
+          "title": "BYO items"
         },
-        "username": {
-          "type": "string",
-          "title": "The username in the MaaS API"
-        },
-        "oauth_key": {
-          "type": "string",
-          "title": "The OAuth key for the endpoint"
+        "instance_groups": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/CreateClusterAWSSpecAWSInstanceGroup"
+          },
+          "title": "Instance groups"
         }
       }
     },
@@ -395,9 +306,8 @@
           "type": "string",
           "title": "What is the provider - currently this is aws or maas"
         },
-        "maas": {
-          "$ref": "#/definitions/cluster_manager_apiCreateClusterMaaSSpec",
-          "title": "The MaaS specification"
+        "k8s_version": {
+          "type": "string"
         },
         "aws": {
           "$ref": "#/definitions/cluster_manager_apiCreateClusterAWSSpec",
@@ -414,10 +324,8 @@
           "title": "Whether or not the cluster was provisioned by this request"
         },
         "cluster": {
-          "$ref": "#/definitions/cluster_manager_apiClusterItem"
-        },
-        "error": {
-          "$ref": "#/definitions/cluster_manager_apiError"
+          "$ref": "#/definitions/cluster_manager_apiClusterItem",
+          "title": "The details of the cluster request response"
         }
       }
     },
@@ -432,75 +340,6 @@
         "status": {
           "type": "string",
           "title": "Status of the request"
-        }
-      }
-    },
-    "cluster_manager_apiDeleteHelmChartReply": {
-      "type": "object",
-      "properties": {
-        "ok": {
-          "type": "boolean",
-          "format": "boolean",
-          "title": "Was the operation successful"
-        },
-        "message": {
-          "type": "string",
-          "title": "What messages were given"
-        }
-      }
-    },
-    "cluster_manager_apiError": {
-      "type": "object",
-      "properties": {
-        "code": {
-          "type": "string",
-          "title": "The error code"
-        },
-        "message": {
-          "type": "string",
-          "title": "The error message"
-        }
-      }
-    },
-    "cluster_manager_apiGenericHelmChart": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string",
-          "title": "What is the name of the deployment"
-        },
-        "namespace": {
-          "type": "string",
-          "title": "What is the namespace to deploy the application to"
-        },
-        "repo": {
-          "type": "string",
-          "title": "What is the chart repository"
-        },
-        "chart": {
-          "type": "string",
-          "title": "What is the chart name"
-        },
-        "values": {
-          "type": "string",
-          "title": "What are the options (nested yaml - the Values.yaml contents)"
-        },
-        "version": {
-          "type": "string",
-          "title": "What is the chart version"
-        }
-      }
-    },
-    "cluster_manager_apiGenericHelmRepository": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string",
-          "title": "What is the name of the repository"
-        },
-        "url": {
-          "type": "string",
-          "title": "What is the URL of the repository"
         }
       }
     },
@@ -531,28 +370,6 @@
         },
         "cluster": {
           "$ref": "#/definitions/cluster_manager_apiClusterDetailItem"
-        },
-        "error": {
-          "$ref": "#/definitions/cluster_manager_apiError"
-        }
-      }
-    },
-    "cluster_manager_apiGetPodCountMsg": {
-      "type": "object",
-      "properties": {
-        "namespace": {
-          "type": "string",
-          "title": "Namespace to fetch the pod count\nLeave empty to query all namespaces"
-        }
-      }
-    },
-    "cluster_manager_apiGetPodCountReply": {
-      "type": "object",
-      "properties": {
-        "pods": {
-          "type": "integer",
-          "format": "int32",
-          "title": "Number of pods in the namespace (or all namespaces)"
         }
       }
     },
@@ -568,99 +385,8 @@
           "$ref": "#/definitions/GetVersionReplyVersionInformation",
           "title": "Version Information"
         }
-      }
-    },
-    "cluster_manager_apiHelloWorldMsg": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string"
-        }
       },
-      "title": "The Hello World request"
-    },
-    "cluster_manager_apiHelloWorldReply": {
-      "type": "object",
-      "properties": {
-        "message": {
-          "type": "string"
-        }
-      },
-      "title": "The response to Hello World"
-    },
-    "cluster_manager_apiInstallHelmChartMsg": {
-      "type": "object",
-      "properties": {
-        "packageManagerName": {
-          "type": "string",
-          "title": "What is the package manager name"
-        },
-        "chart": {
-          "$ref": "#/definitions/cluster_manager_apiGenericHelmChart",
-          "title": "Chart Settings"
-        },
-        "repo": {
-          "$ref": "#/definitions/cluster_manager_apiGenericHelmRepository",
-          "title": "Repository Settings"
-        }
-      }
-    },
-    "cluster_manager_apiInstallHelmChartReply": {
-      "type": "object",
-      "properties": {
-        "ok": {
-          "type": "boolean",
-          "format": "boolean",
-          "title": "Was the operation successful"
-        },
-        "message": {
-          "type": "string",
-          "title": "What messages were given"
-        }
-      }
-    },
-    "cluster_manager_apiProvisionTillerMsg": {
-      "type": "object",
-      "properties": {
-        "cluster": {
-          "type": "string",
-          "title": "Cluster tiller should be installed on"
-        },
-        "namespace": {
-          "type": "string",
-          "title": "Namespace tiller should be installed in"
-        },
-        "version": {
-          "type": "string",
-          "title": "Versino of tiller/helm to install / upgrade to"
-        },
-        "cluster_wide": {
-          "type": "boolean",
-          "format": "boolean",
-          "title": "Is the tiller a cluster-wide tiller?\nShould it have cluster-wide admin privileges?"
-        },
-        "admin_namespaces": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "title": "Namespaces that it should be able to admin on"
-        }
-      }
-    },
-    "cluster_manager_apiProvisionTillerReply": {
-      "type": "object",
-      "properties": {
-        "ok": {
-          "type": "boolean",
-          "format": "boolean",
-          "title": "Was the operation successful"
-        },
-        "message": {
-          "type": "string",
-          "title": "What messages were given"
-        }
-      }
+      "title": "Reply for version request"
     }
   },
   "externalDocs": {
